--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/8ddf321cf8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- header  -->
     <header class="header">
-      <nav>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="main-nav">
+        <nav class="navbar navbar-expand-lg text-white">
           <div class="container-fluid container">
             <a class="navbar-brand" href="#">
               <img src="./assets/Group 1.png" alt="" />
@@ -37,59 +41,46 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse  navbar-collapse" id="navbarSupportedContent">
+              <!-- Navlink start  -->
+              <ul class="navbar-nav d-flex navlinks me-auto mb-2 mb-lg-0 text-white ">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a class="nav-link text-white" aria-current="page" href="#"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    Dropdown
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li><hr class="dropdown-divider" /></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                  </ul>
+                  <a class="nav-link text-white" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  <a class="nav-link text-white" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Contack Us</a>
                 </li>
               </ul>
-              <form class="d-flex" role="search">
-                <input
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                />
-                <button class="btn btn-outline-success" type="submit">
-                  Search
-                </button>
-              </form>
+              <div class="d-flex" role="search">
+                <div class=" nav-phone-btn">
+                  <div class=" call-icon">
+                    <i class="fa-solid fa-phone"></i>
+                  </div>
+                  <div class=" text-black phone-nav">
+                    <h6>Phone</h6>
+                    <p>9845896996</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </nav>
       </nav>
-      <section>
-            
-      </section>
+      <section class="hero-section"></section>
     </header>
     <!-- Main  -->
     <main></main>
