hero section more fetaure created

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse  navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <!-- Navlink start  -->
-              <ul class="navbar-nav d-flex navlinks me-auto mb-2 mb-lg-0 text-white ">
+              <ul
+                class="navbar-nav d-flex navlinks me-auto mb-2 mb-lg-0 text-white"
+              >
                 <li class="nav-item">
                   <a class="nav-link text-white" aria-current="page" href="#"
                     >Home</a
@@ -66,11 +68,11 @@
                 </li>
               </ul>
               <div class="d-flex" role="search">
-                <div class=" nav-phone-btn">
-                  <div class=" call-icon">
+                <div class="nav-phone-btn">
+                  <div class="call-icon">
                     <i class="fa-solid fa-phone"></i>
                   </div>
-                  <div class=" text-black phone-nav">
+                  <div class="text-black phone-nav">
                     <h6>Phone</h6>
                     <p>9845896996</p>
                   </div>
@@ -80,7 +82,49 @@
           </div>
         </nav>
       </nav>
-      <section class="hero-section"></section>
+      <section class="hero-section text-white d-flex">
+        <div class="container me-auto d-flex hero-container">
+          <div class="">
+            <h1 class="hero-title">
+              Helping You To Bring <br />
+              Back Your Happy <br />
+              Smile
+            </h1>
+            <p class="hero-tag-line">
+              We Offer All Treatments You'd <br />
+              Expect From a General Dentist.
+            </p>
+            <div class="nav-phone-btn text-black apply-btn-hero">Apply now</div>
+          </div>
+          <div>
+            <img class="hero-image" src="./assets/hero-doctor.png" alt="" />
+          </div>
+          <div>
+            <img
+              class="hero-position"
+              src="./assets/hero-position.png"
+              alt=""
+            />
+            <div class="award-win d-flex">
+              <img class="hero-cup" src="./assets/icons/hero-cup.png" alt="" />
+              <div class="phone-nav">
+                <h5>Best Dental</h5>
+                <p>Award Winer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="reletive metal-award">
+        <img class="frame" src="./assets/frame.svg" alt="" />
+        <div class="happy-client d-flex">
+          <img class="hero-cup" src="./assets/icons/smile-face.png" alt="" />
+          <div class="phone-nav">
+            <h5>200+</h5>
+            <p>Happy Clients</p>
+          </div>
+        </div>
+      </div>
     </header>
     <!-- Main  -->
     <main></main>
