about section created

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
           </div>
         </nav>
       </nav>
+
+      <!-- Hero section  -->
       <section class="hero-section text-white d-flex">
         <div class="container me-auto d-flex hero-container">
           <div class="">
@@ -127,7 +129,53 @@
       </div>
     </header>
     <!-- Main  -->
-    <main></main>
+    <main>
+      <!-- About Our Clinic -->
+
+      <section class="container me-auto about-section">
+        <img class="about-image" src="./assets/about-image.png" alt="" />
+
+        <div class="about-des">
+          <div>
+            <p>About Our Clinic</p>
+            <h1>15 Years Of Expertise In Dental Care</h1>
+            <p>
+              Nulla in ultrices risus. Pellentesque nec felis lacus. Phasellus
+              maximus elementum tristique. Suspendisse eros ex, accumsan eget
+              facilisis non, tristique quis mauris. Proin vitae sem molestie,
+              mattis ex vel.
+            </p>
+            <div class="about-support">
+              <div>
+                <img src="./assets/support.png" alt="" />
+              </div>
+              <div>
+                <h4>24 Hour Healthcare Services</h4>
+                <p>
+                  We are committed to your health and well-being, offering the
+                  very latest in comprehensive
+                </p>
+              </div>
+            </div>
+            <div class="about-support">
+              <div>
+                <img src="./assets/office.png" alt="" />
+              </div>
+              <div>
+                <h4>Center of Excellence</h4>
+                <p>
+                  We are committed to your health and well-being, offering the very latest in comprehensive
+                </p>
+              </div>
+            </div>
+            <button class="lets-talk-btn">Let’s Talk</button>
+          </div>
+        </div>
+      </section>
+
+
+      
+    </main>
     <!-- Footer  -->
     <footer></footer>
   </body>
